makes changes in services page

--- a/services.html
+++ b/services.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Welcome to git exercise services page</h1>
+    <h2>Our Services</h2>
+    <ul>
+        <li>Photography</li>
+        <li>Graphic Design</li>
+    </ul>
 </body>
 </html>
