Add new changes to service

--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
     <title>Git exercise | Services</title>
 </head>
 <body>
-    <h1>Welcome to git exercise services page</h1>
+    <h1>Our services</h1>
+    <p>You can always count on us for every service you need.</p>
 </body>
 </html>
