--- a/team.html
+++ b/team.html
@@ -7,6 +7,6 @@
     <title>Git Exercise | Team </title>
 </head>
 <body>
-    <h1>Welcome to git exercise Team page</h1>
+    <h1>Welcome to Git exercise Team page</h1>
 </body>
 </html>
