add list to home page

--- a/home.html
+++ b/home.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Welcome to git exercise</h1>
     <p>All you need to kow</p>
+    <ul>
+        <li>List 1</li>
+        <li>List 2</li>
+        <li>List 3</li>
+    </ul>
 </body>
 </html>
