Add content to home page

--- a/home.html
+++ b/home.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Welcome to git exercise</h1>
-    <p>All you need to kow</p>
+    <p>All you need to kow about Git</p>
 </body>
 </html>
